Changelog
=========

1.1.0 (2011-01-21)
------------------

* Translations moved to locales from i18n [keul]
* Missing translation support for some HTML titles [keul]
* Removed "relevance", totally useless with events search [keul] 

1.0.1
-----

* Fixed *search_events* thak break when parameters are missing [fdelia]

1.0.0
-----

* Initial release
