@@ -3,12 +3,12 @@
     xmlns:kss="http://namespaces.zope.org/kss"
     xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="cciaa.portlet.calendar">
- 
+
  <browser:page
       for="*"
       name="search_events"
       class=".searchevents.SearchEventsView"
-	  template="searchevents.pt"
+      template="searchevents.pt"
       permission="zope2.View"
       />
 
@@ -16,7 +16,7 @@
       for="*"
       name="search_month"
       class=".searchmonth.SearchMonthView"
-	  template="searchmonth.pt"
+      template="searchmonth.pt"
       permission="zope2.View"
       />
 
