@@ -1,134 +1,123 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="cciaa.portlet.calendar">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"
+    xmlns:tal="http://xml.zope.org/namespaces/tal"
+    xmlns:metal="http://xml.zope.org/namespaces/metal"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    metal:use-macro="here/main_template/macros/master"
+    i18n:domain="cciaa.portlet.calendar">
+
 <head>
-    <metal:block metal:fill-slot="head_slot">
-        <link rel="alternate" title="RSS 1.0" type="application/rss+xml"
-              tal:condition="request/SearchableText|nothing"
-              tal:attributes="href string:$here_url/search_rss?${request/QUERY_STRING}"/>
-    </metal:block>
-    
-    <metal:block fill-slot="top_slot"
-                 tal:define="dummy python:request.set('disable_border',1)" />
-    
+  <metal:block metal:fill-slot="head_slot">
+    <link rel="alternate" title="RSS 1.0" type="application/rss+xml"
+        tal:condition="request/SearchableText|nothing"
+        tal:attributes="href string:${portal_url}/search_rss?${request/QUERY_STRING}" />
+  </metal:block>
+  <metal:block fill-slot="top_slot"
+      tal:define="dummy python:request.set('disable_border', 1)" />
 </head>
 
 <body>
 <div metal:fill-slot="main"
-     tal:define="use_types_blacklist request/use_types_blacklist | python:True;
-                 use_navigation_root request/use_navigation_root | python:True;
-                 results python:here.queryCatalog(REQUEST=request,use_types_blacklist=use_types_blacklist, use_navigation_root=use_navigation_root);
-                 Batch python:modules['Products.CMFPlone'].Batch;
-                 b_size python:30;b_start python:0;b_start request/b_start | b_start;
-                 desc_length site_properties/search_results_description_length;
-                 desc_ellipsis site_properties/ellipsis;
-                 searchterm request/SearchableText|nothing;
-                 use_view_action site_properties/typesUseViewActionInListings|python:();">
-    
-    <h1 class="documentFirstHeading"
-        tal:define="eventmonth python:view.month(request);eventyear python:view.year(request)"
-        i18n:translate="cciaa_events_month">
-        Event of 
-        <span tal:content="eventmonth" i18n:name="event_month"/>
-        <span tal:content="eventyear"  i18n:name="event_year" />
-    </h1>
-    
-    <p class="discreet"
-       tal:condition="syntool/isSiteSyndicationAllowed">
-        <a href=""
-           class="link-feed"
-           i18n:translate="title_rss_feed"
-           tal:attributes="href string:$here_url/search_rss?${request/QUERY_STRING}">
-             Subscribe to an always-updated feed of these search for events</a>
-    </p>
+    tal:define="use_types_blacklist request/use_types_blacklist|python:True;
+                use_navigation_root request/use_navigation_root|python:True;
+                results python:here.queryCatalog(REQUEST=request, use_types_blacklist=use_types_blacklist, use_navigation_root=use_navigation_root);
+                Batch python:modules['Products.CMFPlone'].Batch;
+                b_size python:30; b_start python:0; b_start request/b_start|b_start;
+                desc_length site_properties/search_results_description_length;
+                desc_ellipsis site_properties/ellipsis;
+                searchterm request/SearchableText|nothing;
+                use_view_action site_properties/typesUseViewActionInListings|python:();">
 
-    <div tal:condition="not: results">
-        <p><strong i18n:translate="description_no_results_found">No events were found.</strong></p>
-    </div>
+  <h1 class="documentFirstHeading"
+      tal:define="eventmonth python:view.month(request);
+                  eventyear python:view.year(request)"
+      i18n:translate="cciaa_events_month">
+    Event of
+    <span tal:content="eventmonth" i18n:name="event_month" />
+    <span tal:content="eventyear" i18n:name="event_year" />
+  </h1>
 
-    <div tal:condition="results"
-          tal:define="batch python:Batch(results, b_size, int(b_start), orphan=1);">
+  <p class="discreet" tal:condition="syntool/isSiteSyndicationAllowed">
+    <a href="" class="link-feed"
+        tal:attributes="href string:${portal_url}/search_rss?${request/QUERY_STRING}"
+        i18n:translate="title_rss_feed">
+  Subscribe to an always-updated feed of these search for events</a>
+  </p>
 
-        <dl class="searchResults">
-        <tal:results repeat="result batch">
-        
-        <tal:entry define="result_url result/getURL;
-                           result_type result/portal_type;
-                           item_icon python:plone_view.getIcon(result);
-                           url python:'%s?searchterm=%s'%(view.test(result_type in use_view_action, result_url+'/view', result_url+'/'), searchterm);">
-            <dt tal:define="item_wf_state_class string:state-${result/review_state};"
-                tal:attributes="class python:'contenttype-' + normalizeString(result.portal_type)">
-              <img tal:replace="structure item_icon/html_tag" />
-               <a
-                 href="#" 
-                 tal:attributes="href url;
-                                 class string:$item_wf_state_class"
-                 tal:content="result/pretty_title_or_id" />
-            </dt>
-            
-            <dd>
-                <span tal:replace="python:plone_view.cropText(result.Description, desc_length, desc_ellipsis)">
-                    Cropped description
-                </span>
+  <div tal:condition="not: results">
+    <p><strong i18n:translate="description_no_results_found">
+    No events were found.
+    </strong></p>
+  </div>
 
-            <span class="documentByLine"
-                  tal:condition="python:not isAnon or site_properties.allowAnonymousViewAbout">
-                <span class="documentAuthor"
-                    i18n:translate="label_by_author">
-                by
-                <a href="#"
-                   tal:attributes="href string:${portal_url}/author/${result/Creator}"
-                   tal:content="result/Creator"
-                   tal:omit-tag="not:result/Creator"
-                   i18n:name="author">
-                Bob Dobalina
-                </a>
-
-                </span>
-
-                <span class="documentModified">
-                  &mdash;
-                    <span i18n:translate="box_last_modified">
-                    last modified
-                    </span>
-                    <span tal:replace="python:toLocalizedTime(result.ModificationDate, long_format=1)">
-                    August 16, 2001 at 23:35:59
-                    </span>
-                </span>
-
-
-                <span tal:define="categories result/Subject|nothing"
-                      tal:condition="categories">
-                    &mdash;
-                    <tal:filedunder i18n:translate="label_filed_under">filed under:</tal:filedunder>
-                        <span tal:repeat="category categories">
-                            <a href=""
-                               class="link-category"
-                               rel="tag"
-                               tal:content="category"
-                               tal:attributes="href string:${portal_url}/search?Subject%3Alist=${category}">
-                               Category
-                            </a><tal:separator condition="not: repeat/category/end">,</tal:separator>
-                        </span>
-                </span>    
-
+  <div tal:condition="results"
+      tal:define="batch python:Batch(results, b_size, int(b_start), orphan=1);">
+    <dl class="searchResults">
+    <tal:results repeat="result batch">
+      <tal:entry
+          define="result_url result/getURL;
+                  result_type result/portal_type;
+                  item_icon python:plone_view.getIcon(result);
+                  result_view_url python:result_type in use_view_action
+                                  and result_url + '/view'
+                                  or result_url + '/';
+                  url python:'%s?searchterm=%s' % (result_view, searchterm)">
+        <dt tal:define="item_wf_state_class string:state-${result/review_state};
+                        normalizeString nocall:context/@@plone/normalizeString"
+            tal:attributes="class python:'contenttype-' + normalizeString(result.portal_type)">
+          <img tal:replace="structure item_icon/html_tag" />
+          <a href="#"
+              tal:attributes="href url; class string:$item_wf_state_class"
+              tal:content="result/pretty_title_or_id"
+              />
+        </dt>
+        <dd>
+          <span tal:replace="python:plone_view.cropText(result.Description, desc_length, desc_ellipsis)">
+          Cropped description
+          </span>
+          <span class="documentByLine"
+              tal:define="isAnon context/@@plone_portal_state/anonymous"
+              tal:condition="python:not isAnon or site_properties.allowAnonymousViewAbout">
+            <span class="documentAuthor"
+                i18n:translate="label_by_author">by
+              <a href="#"
+                  tal:attributes="href string:${portal_url}/author/${result/Creator}"
+                  tal:content="result/Creator"
+                  tal:omit-tag="not:result/Creator"
+                  i18n:name="author">Bob Dobalina</a>
+            </span>
+            <span class="documentModified">&mdash;
+              <span i18n:translate="box_last_modified">last modified</span>
+              <span
+                  tal:define="toLocalizedTime nocall:context/@@plone/toLocalizedTime"
+                  tal:replace="python:toLocalizedTime(result.ModificationDate, long_format=1)">
+              August 16, 2001 at 23:35:59
+              </span>
             </span>
 
-            </dd>
+            <span tal:define="categories result/Subject|nothing"
+                  tal:condition="categories">&mdash;
+              <tal:filedunder i18n:translate="label_filed_under">
+              filed under:
+              </tal:filedunder>
+              <span tal:repeat="category categories">
+                <a href="" class="link-category" rel="tag"
+                    tal:content="category"
+                    tal:attributes="href string:${portal_url}/search?Subject%3Alist=${category}">
+                    Category</a>
+                <tal:separator condition="not: repeat/category/end">,
+                </tal:separator>
+              </span>
+            </span>
+          </span>
+        </dd>
+      </tal:entry>
+    </tal:results>
+    </dl>
 
-        </tal:entry>
-        </tal:results>
-        </dl>
-         
-        <div metal:use-macro="here/batch_macros/macros/navigation" />
+    <div metal:use-macro="here/batch_macros/macros/navigation" />
 
-    </div>
+  </div>
 
 </div>
 </body>
 </html>
-
