@@ -1,12 +1,17 @@
 Changelog
 =========
 
+trunk (2011-06-19)
+------------------
+
+* Updated to Plone 4.1 [davilima6]
+
 1.1.0 (2011-01-21)
 ------------------
 
 * Translations moved to locales from i18n [keul]
 * Missing translation support for some HTML titles [keul]
-* Removed "relevance", totally useless with events search [keul] 
+* Removed "relevance", totally useless with events search [keul]
 
 1.0.1
 -----
